--- a/lclbinding/unit2.lfm
+++ b/lclbinding/unit2.lfm
@@ -4,8 +4,9 @@ object Form: TForm
   Top = 130
   Width = 668
   Caption = 'Form1'
-  ClientHeight = 393
+  ClientHeight = 373
   ClientWidth = 668
+  Menu = MainMenu1
   LCLVersion = '1.4.2.0'
   object Button1: TButton
     Left = 494
@@ -56,5 +57,18 @@ object Form: TForm
     Width = 34
     Caption = 'Label1'
     ParentColor = False
+  end
+  object MainMenu1: TMainMenu
+    left = 54
+    top = 20
+    object MenuItem1: TMenuItem
+      Caption = 'file'
+      object MenuItem2: TMenuItem
+        Caption = 'open'
+      end
+      object MenuItem3: TMenuItem
+        Caption = 'save'
+      end
+    end
   end
 end
